src/components/ContentOpenWith/ContentOpenWith.scss
@import '../variables';

.be.bcow {
    .btn {
        padding: 3px 13px 3px 10px;
    }

    .btn-content {
        align-items: center;
        display: flex;
    }

    .bcow-btn-header-text {
        padding-left: 3px;
    }

    .icon-caret-down {
        margin-top: 4px;
    }

    .bcow-integration-icon {
        padding: 3px;
    }
}

.bcow-menu {
    .bcow-menu-item-title {
        color: $threes;
        font-weight: 700;
        margin: 0;
        overflow: hidden;
        text-overflow: ellipsis;
    }

    .bcow-menu-item-description {
        color: $downtown-grey;
        font-size: 11px;
        line-height: 14px;
        margin: 0;
        white-space: normal;
        word-wrap: break-word;
    }
}

.bcow-portal-container {
    align-items: center;
    display: flex;
    height: 100vh;
    justify-content: center;
    width: 100vw;

    .bcow-portal-loading-indicator {
        div {
            // Platform standard color
            background-color: $twos;
        }
    }
}

